[package]
name = "eth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oe = { path = "oe" }
ethcore = { git = "https://github.com/717a56e1/openethereum.git", rev = "16e96262bfaa25807c6ae27fc41c93d347f2d145" }
ethcore-miner = { git = "https://github.com/717a56e1/openethereum.git", rev = "16e96262bfaa25807c6ae27fc41c93d347f2d145" }
ethcore-service = { git = "https://github.com/717a56e1/openethereum.git", rev = "16e96262bfaa25807c6ae27fc41c93d347f2d145" }
ethcore-call-contract = { git = "https://github.com/717a56e1/openethereum.git", rev = "16e96262bfaa25807c6ae27fc41c93d347f2d145" }
ethcore-accounts = { git = "https://github.com/717a56e1/openethereum.git", rev = "16e96262bfaa25807c6ae27fc41c93d347f2d145" }
primitive-types = "0.7.2"
ethcore-io = { git = "https://github.com/717a56e1/openethereum.git", rev = "16e96262bfaa25807c6ae27fc41c93d347f2d145" }
ethereum-types = "0.9.2"
common-types = { git = "https://github.com/717a56e1/openethereum.git", rev = "16e96262bfaa25807c6ae27fc41c93d347f2d145" }
parity-rpc = { git = "https://github.com/717a56e1/openethereum.git", rev = "16e96262bfaa25807c6ae27fc41c93d347f2d145" }
parking_lot = "0.11.1"
parity-runtime = { git = "https://github.com/717a56e1/openethereum.git", rev = "16e96262bfaa25807c6ae27fc41c93d347f2d145" }
jsonrpc-core = "15.0.0"
