[package]
name = "node-net"
version = "0.1.0"
authors = ["Colton Fike <fike@purdue.edu>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = { package = "config", path="../../config"}
util = { package = "util", path="../../util"}
consensus = { package = "consensus", path="../../consensus"}
consensus-net = { package = "consensus-net", path="../../consensus/net"}
types = { package = "types", path="../../types"}
net = { package = "net", path="../../net"}
clap = {version = "2", features = ["yaml"]}
tokio = { version = "1.0", features = ["full"] }
futures = "0.3.8"
log="*"
simple_logger="*"
